@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.111 2004/03/04 16:32:19 corion Exp $
+# $Id: Changes,v 1.112 2004/03/21 05:41:59 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.73_03
@@ -6,6 +6,8 @@ Revision history for Perl extension WWW::Mechanize
 	* WWW::Mechanize now sends an Accept-Encoding header of "identity"
 	  to always enforce plaintext responses. Preliminary support for
 	  Compress::Zlib is also there, but is disabled by default.
+
+	* Added click_button() method.  Thanks, Linda Lee Julien.
 	  
 	[FIXES]
 	* Still more fixes if the machine you're on doesn't have
